# vieribot-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  sqlx-data.json
migrations/: 20221114152510_monitor.sql
src/: error.rs  main.rs
src/commands/: admin.rs  mod.rs  tetr.rs
src/commands/tetr/: client.rs  db.rs
