[package]
name = "vieribot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.4.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "offline",
] }
